# ChatShare

./: .dockerignore  .gitignore  BUILD  CMakeLists.txt  Dockerfile  MODULE.bazel  Readme.md  compose.yml  config.h  config.h.in  vcpkg.bzl  vcpkg.json
client/: BUILD  CMakeLists.txt
client/include/: Client.h
client/src/: Client.cpp
db-engine/: BUILD  CMakeLists.txt
db-engine/include/: DBEngine.h
db-engine/src/: DBEngine.cpp
include/: ChatShare.h
server/: BUILD  CMakeLists.txt
server/include/: Server.h
server/src/: Server.cpp
src/: ChatShare.cpp  main.cpp
test/: ChatShareTests.cpp  DBEngineTests.cpp  ServerTests.cpp
